--- a/articles.html
+++ b/articles.html
@@ -11,12 +11,12 @@
 <body>
     <header id="articles">
         <div class="present">
-            <a href="index.html">
                 <h1 class="who">Aleksandra Chernous</h1>
-                <h1 class="what">LLM, PhD in Law</h1>
-            </a>    
+                <h1 class="what">LLM, PhD in Law</h1>        
         </div>
+
         <nav class="menu">
+            <a href="index.html">HOME</a>
             <a href="practise.html">PRACTICE</a>
             <a class="activ" href="articles.html">ARTICLES</a>
             <a href="contact.html">CONTACT</a>
