--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 <body>
     <header id="contact">
         <div class="present">
-            <a href="index.html">
                 <h1 class="who">Aleksandra Chernous</h1>
-                <h1 class="what">LLM, PhD in Law</h1>
-            </a>    
+                <h1 class="what">LLM, PhD in Law</h1>   
         </div>
+
         <nav class="menu">
+            <a href="index.html">HOME</a>
             <a href="practise.html">PRACTICE</a>
             <a href="articles.html">ARTICLES</a>
             <a class="activ" href="contact.html">CONTACT</a>
@@ -26,7 +26,7 @@
         <div class="contact_info">
             <img src="images/image3.jpg"width="300" height="260" alt="reading">
             <ul>
-                <li>Oleksandra Chornous</li>
+                <li>Aleksandra Chornous</li>
                 <li>what@know.no</li>
                 <li>11-11-11</li>
             </ul>
