--- a/practise.html
+++ b/practise.html
@@ -12,12 +12,12 @@
 <body>
     <header id="practise">
         <div class="present">
-            <a href="index.html">
                 <h1 class="who">Aleksandra Chernous</h1>
                 <h1 class="what">LLM, PhD in Law</h1>
-            </a>    
         </div>
+
         <nav class="menu">
+            <a href="index.html">HOME</a>
             <a class="activ" href="practise.html">PRACTICE</a>
             <a href="articles.html">ARTICLES</a>
             <a href="contact.html">CONTACT</a>
@@ -33,8 +33,9 @@
                 <li>E-commerce Law</li>
                 <li>Internet Governance</li>
               </ul>
-            <img src="images/image2.jpg"width="300" height="200" alt="reading">
+            <img src="images/image2.jpg"width="260" height="160" alt="reading">
         </div>
+        
         <div class="Autor_transl">
             <h1>AUTHORISED TRANSLATIONS</h1>
             <p>English - Russian </br> Russian - English </p>
