--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <div class="contact_info">
             <img src="images/image3.jpg"width="300" height="260" alt="reading">
             <ul>
-                <li>Aleksandra Chornous</li>
+                <li>Oleksandra Chornous</li>
                 <li>what@know.no</li>
                 <li>11-11-11</li>
             </ul>
@@ -34,6 +34,7 @@
             <h1>Useful links</h1>
             <a href="https://ec.europa.eu/info/index_en"target="_blank"><p><h3>European Commission</h3></a></p>
             <a href="https://echr.coe.int/Pages/home.aspx?p=home"target="_blank"><p><h3>The European Court of Human Rights (ECHR)</h3></a></p>
+                     
         </div>
     </main>
 </body>
