--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         <div class="contact_info">
             <img src="images/image3.jpg"width="300" height="260" alt="reading">
             <ul>
-                <li>Oleksandra Chornous</li>
+                <li>Aleksandra Chornous</li>
                 <li>what@know.no</li>
                 <li>11-11-11</li>
             </ul>
