--- a/practise.html
+++ b/practise.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="menu">
             <a href="index.html">HOME</a>
-            <a class="activ" href="practise.html">PRACTIS</a>
+            <a class="activ" href="practise.html">PRACTICE</a>
             <a href="articles.html">ARTICLES</a>
             <a href="contact.html">CONTACT</a>
         </nav>   
