--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
                 <h3 class="lawsuits">Lawsuits </h3>
                 <h3 class="memorandums">Memorandums</h3>
                 <h3 class="expertise">Legal expertise</h3>
-                <h3 class="translations">Autorised translations</h3>
+                <h3 class="translations">Authorised translations</h3>
             </div>
-            
-            
         </div>
     </main>        
 
