--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h3 class="lawsuits">Lawsuits </h3>
                 <h3 class="memorandums">Memorandums</h3>
                 <h3 class="expertise">Legal expertise</h3>
-                <h3 class="contacts">Authorised translations</h3>
+                <h3 class="lawsuits">Authorised translations</h3>
             </div>
         </div>
     </main>        
