--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2 class="researcher">researcher</h2>
             </div>
             <div class="other">
-                <h3 class="contacts">Contacts </h3>
+                <h3 class="contacts">Contracts </h3>
                 <h3 class="lawsuits">Lawsuits </h3>
                 <h3 class="memorandums">Memorandums</h3>
                 <h3 class="expertise">Legal expertise</h3>
